# python-teaching

./: .gitignore  .pylintrc  README.md  pyproject.toml
basic_knowledge/: def函数教学.md  lists_and_tuples_pracitce.py  基本数据类型.md  条件循环语句.md
cralwers/: cralwers_info.py  cralwers_proxy_ip.py  download.py  get_company.py  requests_cralwers.md  selenium_cralwers.md  爬虫教学.md
cralwers/config/: __init__.py  settings.yml
cralwers/examination/: cralwer_campus_info.py
cralwers/practice/: cralwer_campus_info.py  cralwers_info.py  cralwers_medical_data_demo.py  cralwers_proxy_ip.py  download.py  get_company.py
cralwers/utils/: browser.py  files.py
docs/: def函数教学.md  notes.md  preparation.md  scrapy_cralwers.md  selenium_cralwers.md  基本数据类型.md  条件循环语句.md
python_basic_data_type/: def_demo.py  docs.md  list_example.py  string_example.py  while_demo.py
python基础数据类型/: def_demo.py  python基本数据类型.md  str_demo.py
python条件循环语句/: docs.md
