[tool.poetry]
name = "python-teaching"
version = "0.1.0"
description = "Python Teaching Blog"
authors = ["Terry <17601306065@163.com>"]
readme = "README.md"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
dynaconf = "^3.1.11"
matplotlib = "^3.6.3"
pymysql = "^1.0.2"
lxml = "^4.9.2"
selenium = "^4.8.3"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pylint = "^2.16.1"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.main]
good-names = [
    "kv",
    "d",
    "e",
    "li",
    "i",
    "k"
]
disable = [
    "broad-exception-caught"
]
max-line-length = 120